# pyangulate

./: .gitignore  .sunpy-template.yml  README.rst  elliptical.py  setup.cfg  setup.py  tie_pointing.py  tox.ini  transformations.py  transforms.py  triangulate.py  utils.py
docs/: conf.py  index.rst
elliptical/: elliptical.py  parallelogram.py  quadrilateral.py
elliptical/tests/: test_elliptical.py  test_elliptical_old.py  test_parallelogram.py  test_quadrilateral.py
licenses/: LICENSE.rst
pyangulate/: transforms.py  triangulate.py  utils.py
pyangulate/elliptical/: elliptical.py  parallelogram.py  quadrilateral.py
pyangulate/elliptical/tests/: test_elliptical.py  test_parallelogram.py  test_quadrilateral.py
pyangulate/tests/: test_transforms.py  test_triangulate.py  test_utils.py
tests/: test_elliptical.py  test_tie_pointing.py  test_transformations.py  test_transforms.py  test_triangulate.py  test_utils.py
