[metadata]
name = pyangulate
author = Dan Ryan
author_email = ryand5@tcd.ie
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = 
description = Derive 3-D information from simultaneous observations from two locations in the solar system
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "pyangulate" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  pyangulate/__init*
  pyangulate/conftest.py
  pyangulate/*setup_package*
  pyangulate/tests/*
  pyangulate/*/tests/*
  pyangulate/extern/*
  pyangulate/version*
  */pyangulate/__init*
  */pyangulate/conftest.py
  */pyangulate/*setup_package*
  */pyangulate/tests/*
  */pyangulate/*/tests/*
  */pyangulate/extern/*
  */pyangulate/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
